27
- get Stata working directory